force-app/main/default/objects/Pricing_Scheme__c/Pricing_Scheme__c.object-meta.xml
<CustomObject>
    <label>Pricing Scheme</label>
    <nameField>
        <label>Pricing Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Schemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>