force-app/main/default/objects/Pricing_Scheme__c/fields/Allow_Pathing__c.field-meta.xml
<CustomField>
    <fullName>Allow_Pathing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Pathing</label>
    <type>Checkbox</type>
</CustomField>