force-app/main/default/objects/Pricing_Scheme__c/fields/Base_Price_TC__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_TC__c</fullName>
    <label>Base Price TC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>