force-app/main/default/objects/Pricing_Scheme__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date pricing scheme becomes inactive</description>
    <inlineHelpText>Date pricing scheme becomes inactive</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>