force-app/main/default/objects/Pricing_Scheme__c/fields/Financial_Basis_Group__c.field-meta.xml
<CustomField>
    <fullName>Financial_Basis_Group__c</fullName>
    <label>Financial Basis Group</label>
    <length>150</length>
    <type>Text</type>
</CustomField>