force-app/main/default/objects/Pricing_Scheme__c/fields/Internal_Account__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pricing Schemes</relationshipLabel>
    <relationshipName>Pricing_Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>