force-app/main/default/objects/Pricing_Scheme__c/fields/NYMEX_Volume_Type__c.field-meta.xml
<CustomField>
    <fullName>NYMEX_Volume_Type__c</fullName>
    <defaultValue>&quot;Billing&quot;</defaultValue>
    <description>The Volume Type of the related NYMEX Pricing Fee</description>
    <inlineHelpText>The Volume Type of the related NYMEX Pricing Fee</inlineHelpText>
    <label>NYMEX Volume Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>