force-app/main/default/objects/Pricing_Scheme__c/fields/Operating_Group__c.field-meta.xml
<CustomField>
    <fullName>Operating_Group__c</fullName>
    <label>Operating Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>