force-app/main/default/objects/Pricing_Scheme__c/fields/Rollover_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Rollover_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rollover Allowed</label>
    <type>Checkbox</type>
</CustomField>