force-app/main/default/objects/Pricing_Scheme__c/fields/Rollover_Type__c.field-meta.xml
<CustomField>
    <fullName>Rollover_Type__c</fullName>
    <label>Rollover Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rollover_Type</valueSetName>
    </valueSet>
</CustomField>