force-app/main/default/objects/Pricing_Scheme__c/fields/Scheme_Name__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Name__c</fullName>
    <label>Scheme Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>