force-app/main/default/objects/Pricing_Scheme__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Pricing Schemes</relationshipLabel>
    <relationshipName>Pricing_Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>