force-app/main/default/objects/Pricing_Scheme__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date pricing scheme becomes active</description>
    <inlineHelpText>Date pricing scheme becomes active</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>