force-app/main/default/objects/Pricing_Scheme__c/fields/Supply_Pool__c.field-meta.xml
<CustomField>
    <fullName>Supply_Pool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply Pool</label>
    <referenceTo>Supply_Pool__c</referenceTo>
    <relationshipLabel>Pricing Schemes</relationshipLabel>
    <relationshipName>Pricing_Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>