force-app/main/default/objects/Pricing_Scheme__c/fields/Template_Deal_Num__c.field-meta.xml
<CustomField>
    <fullName>Template_Deal_Num__c</fullName>
    <label>Template Deal Num</label>
    <length>100</length>
    <type>Text</type>
</CustomField>