force-app/main/default/objects/Pricing_Scheme__c/fields/Template_Version_Num__c.field-meta.xml
<CustomField>
    <fullName>Template_Version_Num__c</fullName>
    <label>Template Version Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>