force-app/main/default/objects/Pricing_Scheme__c/fields/Trigger_Rights__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Rights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Rights</label>
    <type>Checkbox</type>
</CustomField>