force-app/main/default/objects/Pricing_Scheme__c/listViews/All_with_SP_and_ST.listView-meta.xml
<ListView>
    <fullName>All_with_SP_and_ST</fullName>
    <columns>NAME</columns>
    <columns>Supply_Pool__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Template_Deal_Num__c</columns>
    <columns>Template_Version_Num__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with SP and ST</label>
</ListView>